# Snapshot-server

./: .gitignore  README.md  config.json  curl_commands.sh  init.sql  payload.json  snapshot-api.json  snapshot-server.cabal  snapshots.db  stack.yaml  test.db
app-cli/: Main.hs
app-cli/Cmd/: Interactive.hs  ServeUI.hs
examples/: sampleInput.json
snapshot-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
snapshot-ui/src/: App.vue
snapshot-ui/src/api/: index.ts  types.d.ts
snapshot-ui/src/router/: index.ts
snapshot-ui/src/views/: SnapshotList.vue
src/: API.hs  DB.hs  Error.hs  Main.hs  Models.hs  Server.hs  SnapshotGenerator.hs  Spec.hs  Types.hs  Validation.hs
static/: index.html  snapshot.html
