cabal-version:       2.2
name:                snapshot-server
version:             0.1.0.0
synopsis:            Snapshot-Based Relational Data Server & CLI
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules:
      API
    , Models
    , DB
    , Server
    , SnapshotGenerator
    , Types
  other-modules:
      Error
    , Validation
  build-depends:
      base                    >=4.7 && <5
    , aeson
    , text
    , bytestring
    , containers
    , sqlite-simple
    , uuid
    , time
    , http-client
    , http-client-tls
    , http-conduit
    , sparql-protocol
    , servant                 >=0.20
    , servant-server          >=0.20
    , servant-openapi3        >=2.0
    , openapi3
    , transformers
    , mtl
    , wai
    , wai-extra
    , wai-middleware-static
    , http-types
  default-language: Haskell2010

executable snapshot-server
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
      base
    , snapshot-server
    , servant
    , servant-server
    , openapi3
    , servant-openapi3
    , warp
    , wai
    , http-client
    , http-client-tls
    , sqlite-simple
    , aeson
    , text
    , bytestring
    , containers
    , uuid
    , time
    , transformers
    , mtl
    , wai-extra
    , wai-middleware-static
    , http-conduit
    , http-types
    , sparql-protocol
  other-modules:
      API
    , DB
    , Models
    , Server
    , SnapshotGenerator
    , Types
    , Validation
    , Error
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010

executable snapshot-server-cli
  buildable:        True
  hs-source-dirs:   app-cli
  main-is:          Main.hs
  build-depends:
      base
    , aeson
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , text
    , filepath
    , directory
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
