cabal-version:       2.2
name:                snapshot-server
version:             0.1.0.0
synopsis:            Snapshot-Based Relational Data Server & CLI
build-type:          Simple

library
  hs-source-dirs:
      src
  exposed-modules:
      API
    , Models
    , DB
    , Server
    , SnapshotGenerator
  build-depends:
      base                    >=4.7      && <5
    , aeson                   >=1.5
    , text                    >=1.2
    , bytestring              >=0.10
    , containers              >=0.6
    , sqlite-simple           >=0.4
    , uuid                    >=1.3
    , time                    >=1.9
    , http-client             >=0.7
    , http-client-tls         >=0.3
    , sparql-protocol         >=1.1.0.0
    , servant                 >=0.20
    , servant-server          >=0.20
    , transformers            >=0.5
    , mtl                     >=2.2
    , wai-extra               >=3.1
    , wai-middleware-static   >=0.9
    , http-conduit
    , servant-openapi3
    , openapi3
    , servant-openapi3 
  default-language:    Haskell2010

executable snapshot-server
  hs-source-dirs:
      src
  main-is:
      Main.hs
  other-modules:
      API
    , Models
    , DB
    , Server
    , SnapshotGenerator
  build-depends:
      base                    >=4.7      && <5
    , snapshot-server
    , servant
    , servant-server
    , warp
    , http-client
    , http-client-tls
    , sqlite-simple
    , aeson
    , text
    , bytestring
    , containers
    , uuid
    , time
    , sparql-protocol
    , transformers
    , mtl
    , wai-extra
    , wai-middleware-static   >=0.9
    , http-conduit
    , openapi3
    , servant-openapi3 
  ghc-options:
      -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
  default-language:    Haskell2010

executable snapshot-server-cli
  hs-source-dirs:
      app-cli
  main-is:
      Main.hs
  build-depends:
      base                    >=4.7      && <5
    , snapshot-server
    , aeson
    , text
    , bytestring
    , containers
    , sqlite-simple
    , uuid
    , time
    , optparse-applicative   >=0.15
    , async                  >=2.2
    , http-client
    , http-client-tls
    , http-conduit
    , servant-openapi3 
    , openapi3 
  ghc-options:
      -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
  default-language:    Haskell2010
